trello standard board added / documented

--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <h2 id="til">TIL</h2>
 <p>2020-07-07</p>
-<h4 id="good-favicon-generator-checker">Good favicon generator / checker</h4>
-<p><a href="https://realfavicongenerator.net/">RealFaviconGenerator</a></p>
-<p>#bookmarks</p>
-<hr />
-<h4 id="print-the-default-html-template-for-pandoc">Print the default Html template for Pandoc</h4>
-<pre><code>pandoc --print-default-template html</code></pre>
+<h3 id="set-the-standard-board-in-the-trello-mac-app">Set the standard board in the Trello Mac app</h3>
+<pre class="shift-cmd-d```"><code>
+The standard board is loaded when the Mac app is started, you can
+also switch to it via `Cmd-d`.
+
+
+---
+
+#### Good favicon generator / checker
+
+[RealFaviconGenerator](https://realfavicongenerator.net/)
+
+#bookmarks
+
+---
+
+
+#### Print the default Html template for Pandoc
+</code></pre>
+<p>pandoc –print-default-template html ````</p>
 <p>Redirect it to a file, then adapt the template (e.g. to add a favicon). Then later include the template with</p>
 <pre><code>pandoc --template=FILE</code></pre>
 <p>#pandoc</p>
