--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <h2 id="til">TIL</h2>
 <p>2020-07-07</p>
-<h3 id="set-the-standard-board-in-the-trello-mac-app">Set the standard board in the Trello Mac app</h3>
+<h4 id="follow-redirects-with-curl">Follow redirects with curl</h4>
+<pre><code>curl -L</code></pre>
+<p>or <code>curl --location</code>. Mnemonic: the <code>Location:</code>-header together with a <code>3xx</code> response code is set if a redirect is active.</p>
+<hr />
+<h4 id="set-the-standard-board-in-the-trello-mac-app">Set the standard board in the Trello Mac app</h4>
 <pre><code>Shift-Cmd-d</code></pre>
-<p>The standard board is loaded when the Mac app is started, you can also switch to it via <code>Cmd-d</code>.</p>
+<p>The standard board is loaded when the Mac app is started, you can also quickly switch to it via <code>Cmd-d</code>.</p>
+<p>#trello</p>
 <hr />
 <h4 id="good-favicon-generator-checker">Good favicon generator / checker</h4>
 <p><a href="https://realfavicongenerator.net/">RealFaviconGenerator</a></p>
