--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <p>2020-07-07</p>
 <h4 id="generate-an-image-with-imagemagick">Generate an image with Imagemagick</h4>
 <pre><code>convert -size 1000x1000 canvas:tomato canvas_tomato.png</code></pre>
+<p><a href="http://www.imagemagick.org/Usage/canvas/#solid">Reference</a></p>
+<p>#imagemagick</p>
+<hr />
 <h4 id="follow-redirects-with-curl">Follow redirects with curl</h4>
 <pre><code>curl -L</code></pre>
 <p>or <code>curl --location</code>. Mnemonic: the <code>Location:</code>-header together with a <code>3xx</code> response code is set if a redirect is active.</p>
