--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 </head>
 <body>
 <h2 id="til">TIL</h2>
+<p>2020-07-08</p>
+<h4 id="focus-tip">Focus tip</h4>
+<p>As preparation, before high concentration is required:</p>
+<ol type="1">
+<li>Put on headphones</li>
+<li>Start the <a href="https://www.brain.fm/">Brain.fm</a> app, select one of the ‘Focus’ tracks.</li>
+<li>Will you be able to work without internet for 15-30min? And are you on a Mac? Then use the <a href="https://selfcontrolapp.com/">SelfControl</a> app in whitelist mode.</li>
+</ol>
+<p>If you think 2 and 3 contradict each other (not able to use Brain.fm if no internet): I use the Brain.fm iOS app and use SelfControl on the Mac.</p>
+<p>#focus</p>
+<hr />
 <p>2020-07-07</p>
 <h4 id="generate-an-image-with-imagemagick">Generate an image with Imagemagick</h4>
 <pre><code>convert -size 1000x1000 canvas:tomato canvas_tomato.png</code></pre>
