--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 <h2 id="til">TIL</h2>
 <p>2020-07-08</p>
-<h4 id="focus-tip">Focus tip</h4>
+<h4 id="focus-tip-brain.fm-and-selfcontrol-apps">Focus tip: Brain.fm and SelfControl apps</h4>
 <p>As preparation, before high concentration is required:</p>
 <ol type="1">
 <li>Put on headphones</li>
