--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ try:
     validate_email(&#39;EMAIL_TO_VALIDATE&#39;, check_deliverability=False)
 except EmailNotValidError as e:
     print(str(e)) # nice error message</code></pre>
+<p>#python</p>
 <hr />
 <p>2020-07-08</p>
 <h4 id="focus-tip-brain.fm-and-selfcontrol-apps">Focus tip: Brain.fm and SelfControl apps</h4>
