--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 </head>
 <body>
 <h2 id="til">TIL</h2>
+<p>2020-07-15</p>
+<h4 id="obs-setup-for-live-code-streaming">OBS Setup for Live Code Streaming</h4>
+<ul>
+<li><a href="https://jordanlewis.org/posts/twitch-live-coding/">How to Run a Live Coding Stream on Twitch using OBS</a></li>
+<li><a href="https://news.ycombinator.com/item?id=23835624">Some Discussion</a></li>
+</ul>
+<p>#obs #screensharing</p>
 <p>2020-07-12</p>
 <h4 id="length-of-strings-and-list-like-data-structures-in-different-programming-languages">Length of strings and list-like data structures in different programming languages</h4>
 <p>Python:</p>
