--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 </head>
 <body>
 <h2 id="til">TIL</h2>
+<p>2020-08-04</p>
+<h4 id="make-a-floating-label-in-ionic">Make a floating label in Ionic</h4>
+<p>Set the value of the <code>position</code> attribute of <code>ion-label</code> to <code>floating</code>:</p>
+<pre><code>&lt;ion-label&gt;
+  &lt;ion-label position=&quot;floating&quot;&gt;...&lt;/ion-label&gt;
+  &lt;ion-input&gt;&lt;/ion-input&gt;
+&lt;/ion-label&gt;
+</code></pre>
+<p>other possible values vor <code>position</code> are <code>stacked</code> (this will place the label above the input element), <code>fixed</code>, and undefined (inline).</p>
+<p>#ionic</p>
+<hr />
 <p>2020-07-28</p>
 <h4 id="insert-current-date-in-emacs-buffer">Insert current date in Emacs buffer</h4>
 <pre><code>(defun insert-date ()
@@ -31,6 +42,7 @@
   (interactive)
   (insert (format-time-string &quot;%F\n&quot; (current-time))))</code></pre>
 <p>See <code>C-h f format-time-string</code> for other formatting options.</p>
+<p>#emacs</p>
 <hr />
 <p>2020-07-15</p>
 <h4 id="obs-setup-for-live-code-streaming">OBS Setup for Live Code Streaming</h4>
